--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
     <div id="ball"></div>
     <img src="images/kitty-4.png" alt="kitty 4">
+  </div>
     
 
-  </div><!-- .wrapper -->
+  <!-- .wrapper -->
   <audio id="player1">
     <source src="audio/purrr.mp3" type="audio/mp3">
     <source src="audio/purrr.ogg" type="audio/ogg">
@@ -38,3 +39,4 @@
   <script src="js/purr-click.js"></script>
 </body>
 </html>
+
